# SymUniverse

./: .gitignore  CMakeLists.txt  LICENSE  README.md
contrib/matlab/: mkmov.m  sterling.m  vrot3.m
include/: SymUniverseConfig.h.in  boundaries.h  sym.h  universe.h
src/: CMakeLists.txt  mod_cleara.c  mod_dummy.c  mod_fgrav.c  mod_hscollide.c  mod_integrate.c  sym.c  ubuild.c  ucat.c  udivide.c  uextract.c  umerge.c  universe.c
src/lib/: CMakeLists.txt  boundaries.c  universe.c
src/modules/: CMakeLists.txt  boundary.c  cleara.c  dummy.c  fgrav.c  hscollide.c  integrate.c  pfgrav.c  ptcollide.c  scollide.c
xcode/: CMakeCache.txt  cmake_install.cmake
xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
xcode/SymUniverse.build/Debug/ALL_BUILD.build/: Script-9600324315C042ECB7B238C8.sh  dgph  dgph~
xcode/SymUniverse.build/Debug/ZERO_CHECK.build/: Script-7186B84064B34687A9C486D1.sh  dgph  dgph~
xcode/SymUniverse.xcodeproj/: project.pbxproj
xcode/SymUniverse.xcodeproj/project.xcworkspace/xcuserdata/lowell.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/SymUniverse.xcodeproj/xcuserdata/lowell.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  boundaries.xcscheme  boundary.xcscheme  cleara.xcscheme  dummy.xcscheme  fgrav.xcscheme  hscollide.xcscheme  integrate.xcscheme  sym.xcscheme  ubuild.xcscheme  ucat.xcscheme  udivide.xcscheme  uextract.xcscheme  umerge.xcscheme  universe.xcscheme  xcschememanagement.plist
xcode/include/: SymUniverseConfig.h
xcode/src/: cmake_install.cmake
xcode/src/lib/: cmake_install.cmake
xcode/src/lib/SymUniverse.build/Debug/boundaries.build/: dgph  dgph~
xcode/src/lib/SymUniverse.build/Debug/boundaries.build/Objects-normal/x86_64/: boundaries.LinkFileList  boundaries.d
xcode/src/lib/SymUniverse.build/Debug/universe.build/: dgph  dgph~
xcode/src/lib/SymUniverse.build/Debug/universe.build/Objects-normal/x86_64/: universe.LinkFileList  universe.d
xcode/src/modules/: cmake_install.cmake
xcode/src/modules/Debug/: boundary.mod  cleara.mod  dummy.mod  fgrav.mod  hscollide.mod  integrate.mod
xcode/src/modules/SymUniverse.build/Debug/boundary.build/: dgph  dgph~
xcode/src/modules/SymUniverse.build/Debug/boundary.build/Objects-normal/x86_64/: boundary.LinkFileList  boundary.d
xcode/src/modules/SymUniverse.build/Debug/cleara.build/: dgph  dgph~
xcode/src/modules/SymUniverse.build/Debug/cleara.build/Objects-normal/x86_64/: cleara.LinkFileList  cleara.d
xcode/src/modules/SymUniverse.build/Debug/dummy.build/: dgph  dgph~
xcode/src/modules/SymUniverse.build/Debug/dummy.build/Objects-normal/x86_64/: dummy.LinkFileList  dummy.d
xcode/src/modules/SymUniverse.build/Debug/fgrav.build/: dgph  dgph~
xcode/src/modules/SymUniverse.build/Debug/fgrav.build/Objects-normal/x86_64/: fgrav.LinkFileList  fgrav.d
xcode/src/modules/SymUniverse.build/Debug/hscollide.build/: dgph  dgph~
xcode/src/modules/SymUniverse.build/Debug/hscollide.build/Objects-normal/x86_64/: hscollide.LinkFileList  hscollide.d
xcode/src/modules/SymUniverse.build/Debug/integrate.build/: dgph  dgph~
xcode/src/modules/SymUniverse.build/Debug/integrate.build/Objects-normal/x86_64/: integrate.LinkFileList  integrate.d
