set(MODULES cleara dummy fgrav pfgrav hscollide ptcollide scollide integrate boundary)
file(GLOB LOCAL_INCLUDES "*.h")
foreach(m IN ITEMS ${MODULES})
    add_library(${m} MODULE ${m}.c ${INCLUDES} ${LOCAL_INCLUDES})
    target_link_libraries(${m} ${LIBRARIES})
    set_property(TARGET ${m} PROPERTY PREFIX "")
    set_property(TARGET ${m} PROPERTY SUFFIX ".mod")
endforeach(m)
unset(LOCAL_INCLUDES)
